<resources>
    <string name="app_name">SEPTA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="realtime_failure_message">Unable to show results. This may be due to a poor network connection or the real time data is temporarily unavailable, please try again later.</string>
    <string name="find_next_train">FIND NEXT TRAIN</string>
    <string name="septa">SEPTA</string>
    <string name="app_tag_line">The Official App of SEPTA</string>
    <string name="favorites">Favorites</string>
    <string name="next_to_arrive">Next To Arrive</string>
    <string name="system_status">System Status</string>
    <string name="schedule">Schedule</string>
    <string name="fares_and_transit_info">Fares and Transit Info</string>
    <string name="perks">Perks</string>
    <string name="connect_with_septa">Connect With SEPTA</string>
    <string name="train_view">TrainView</string>
    <string name="transit_view">TransitView</string>
    <string name="transit_view_beta">TransitView (Beta)</string>
    <string name="tab_rail">Rail</string>
    <string name="tab_bus">Bus</string>
    <string name="tab_trolley">Trolley</string>
    <string name="tab_subway">Subway</string>
    <string name="tab_nhsl">NHSL</string>
    <string name="tab_description">Tap to switch to </string>
    <string name="starting_station">Starting Station</string>
    <string name="destination_station_hint">Destination Station</string>
    <string name="starting_station_hint">Starting Station</string>
    <string name="view_trains_button">VIEW TRAINS</string>
    <string name="title_activity_next_to_arrive_results">NextToArriveResultsActivity</string>
    <string name="RailStationNextToArriveResults">Next To Arrive Rail</string>
    <string name="font_roboto_regular">fonts/Roboto-Regular.ttf</string>
    <string name="font_roboto_bold">fonts/Roboto-Bold.ttf</string>
    <string name="font_roboto_light">fonts/Roboto-Light.ttf</string>
    <string name="font_roboto_medium_italic">fonts/Roboto-MediumItalic.ttf</string>
    <string name="font_roboto_light_italic">fonts/Roboto-LightItalic.ttf</string>
    <string name="font_roboto_medium">fonts/Roboto-Medium.ttf</string>
    <string name="system_map">System Map</string>
    <string name="line_label_rail">Line</string>
    <string name="line_label_bus">Route</string>
    <string name="line_label_subway">Line</string>
    <string name="line_label_trolley">Line</string>
    <string name="line_label_nhsl">Line</string>
    <string name="line_text_rail">Select Line</string>
    <string name="line_text_bus">Select Route</string>
    <string name="line_text_subway">Select Line</string>
    <string name="line_text_trolley">Select Line</string>
    <string name="line_text_nhsl">Select Line</string>
    <string name="start_stop_text_rail">Starting Station</string>
    <string name="start_stop_text_bus">Starting Stop</string>
    <string name="start_stop_text_subway">Starting Stop</string>
    <string name="start_stop_text_trolley">Starting Stop</string>
    <string name="start_stop_text_nhsl">Starting Station</string>
    <string name="dest_stop_text_rail">Destination Station</string>
    <string name="dest_stop_text_bus">Destination Stop</string>
    <string name="dest_stop_text_subway">Destination Stop</string>
    <string name="dest_stop_text_trolley">Destination Stop</string>
    <string name="dest_stop_text_nhsl">Destination Station</string>
    <string name="location_picker_by_address_hint">Type address and select</string>
    <string name="location_picker_by_stop_hint">Type stop name or select</string>
    <string name="line_picker_hint">Type line name or select</string>
    <string name="line_picker_selection_direction">%1$s: to %2$s</string>
    <string name="line_picker_selection">%1$s: %2$s</string>
    <string name="nta_picker_title_rail">Regional Rail</string>
    <string name="nta_picker_title_bus">Bus</string>
    <string name="nta_picker_title_subway">Subway</string>
    <string name="nta_picker_title_trolley">Trolley</string>
    <string name="nta_picker_title_nhsl">Norristown High Speed Line</string>
    <string name="nta_results_title_rail">Next Trains to Arrive</string>
    <string name="nta_results_title_bus">Next Bus to Arrive</string>
    <string name="nta_results_title_subway">Next Subway to Arrive</string>
    <string name="nta_results_title_trolley">Next Trolley to Arrive</string>
    <string name="nta_results_title_nhsl">Next Trains to Arrive</string>
    <string name="need_to_see_rail">Need to see later trains?</string>
    <string name="need_to_see_bus">Need to see later bus?</string>
    <string name="need_to_see_subway">Need to see later subway?</string>
    <string name="need_to_see_trolley">Need to see later trolley?</string>
    <string name="need_to_see_nhsl">Need to see later trains?</string>
    <string name="trip_details_title_rail">Train Details</string>
    <string name="trip_details_title_bus">Bus Details</string>
    <string name="trip_details_title_trolley">Trolley Details</string>
    <string name="trip_details_title_subway">Subway Details</string>
    <string name="trip_details_title_nhsl">Train Details</string>
    <string name="nta_query_button_text">Next To Arrive</string>
    <string name="about_the_septa_app">About the SEPTA App</string>
    <string name="text_empty_trips">No recent trips</string>
    <string name="nta_empty_results">No results found for the next 5 hours. \n\nThis could be due to operating hours having already ended or not yet begun, or a service outage on this route. \n\nPlease refer to Schedules for the next arrival times.</string>
    <string name="suspension_icon_content_description_prefix">Suspension on route:</string>
    <string name="alert_icon_content_description_prefix">Service Alert on route:</string>
    <string name="advisory_icon_content_description_prefix">Advisory alert on route:</string>
    <string name="detour_icon_content_description_prefix">Detour on route:</string>
    <string name="weather_icon_content_description_prefix">Weather alert on route:</string>
    <string name="nta_on_time">On Time</string>
    <string name="nta_now">Now</string>
    <string name="nta_scheduled">Scheduled</string>
    <string name="nta_suspended">Suspended</string>
    <string name="nta_refresh">Refresh</string>
    <string name="heading_rail">Train: </string>
    <string name="heading_bus">Bus: </string>
    <string name="heading_trolley">Trolley: </string>
    <string name="heading_destination"> to %1$s</string>
    <string name="heading_vehicle_number">Vehicle Number: </string>
    <string name="heading_block_id">Block ID: </string>
    <string name="heading_status">Status: </string>
    <string name="heading_status_delay">%1$s late</string>
    <string name="heading_rail_number_cars"># of Train Cars: </string>
    <string name="delete_fav_modal_title">Delete Favorite?</string>
    <string name="delete_fav_modal_text">Are you sure you want to remove this from your favorites?</string>
    <string name="delete_fav_pos_button">Delete</string>
    <string name="delete_fav_neg_button">Cancel</string>
    <string name="create_nta_favorite">Trip saved to your Favorites</string>
    <string name="create_nta_favorite_failed">Trip could not be saved to Favorites</string>
    <string name="create_transitview_favorite">TransitView selection saved to your Favorites</string>
    <string name="create_transitview_favorite_failed">Selection could not be saved to Favorites</string>
    <string name="nta_favorite_icon_title_remove">Tap to remove this Next To Arrive result as a favorite</string>
    <string name="nta_favorite_icon_title_create">Tap to create a favorite from this Next To Arrive result</string>
    <string name="transitview_favorite_icon_title_remove">Tap to remove this TransitView selection from your Favorites</string>
    <string name="transitview_favorite_icon_title_create">Tap to create a Favorite from this TransitView selection</string>
    <string name="schedule_favorite_icon_title_remove">Tap to remove this Schedule result as a favorite</string>
    <string name="schedule_favorite_icon_title_create">Tap to create a Favorite from this Schedule result</string>
    <string name="snackbar_no_connection_link_text">Schedules »</string>
    <string name="favorites_empty_results_msg">No Update</string>
    <string name="favorites_view_schedules_msg">View Schedules »</string>
    <string name="favorites_view_transitview">View »</string>
    <string name="favorites_menu_item_add">Add</string>
    <string name="favorites_menu_item_edit">Edit</string>
    <string name="favorites_menu_item_done">Done</string>
    <string name="favorites_add_new">Add a Favorite</string>
    <string name="no_favorites_to_edit">You have no favorites to edit!</string>
    <string name="rename_favorite_nta">Edit Favorite Trip</string>
    <string name="rename_favorite_transitview">Edit TransitView Favorite</string>
    <string name="system_status_picker_title_rail">Regional Rail Status</string>
    <string name="system_status_picker_title_bus">Bus Status</string>
    <string name="system_status_picker_title_subway">Subway Status</string>
    <string name="system_status_picker_title_trolley">Trolley Status</string>
    <string name="system_status_picker_title_nhsl">NHSL Status</string>
    <string name="system_status_results_title_rail">System Status: Regional Rail</string>
    <string name="system_status_results_title_bus">System Status: Bus</string>
    <string name="system_status_results_title_subway">System Status: Subway</string>
    <string name="system_status_results_title_trolley">System Status: Trolley</string>
    <string name="system_status_results_title_nhsl">System Status: NHSL</string>
    <string name="transitview_heading">Select Up to 3 Routes</string>
    <string name="transitview_query_button_text">View Map</string>
    <string name="transitview_line_picker_first_text">Select a Bus Route or Trolley Line</string>
    <string name="transitview_line_picker_second_text">Select a Second Bus Route or Trolley Line</string>
    <string name="transitview_line_picker_third_text">Select a Third Bus Route or Trolley Line</string>
    <string name="transitview_add_route">You must select a bus or trolley route to view TransitView results!</string>
    <string name="transitview_remove_route_title">Remove Route %1$s?</string>
    <string name="transitview_remove_route_text">Would you like to remove this route from your current TransitView selection?</string>
    <string name="transitview_remove_route_pos_button">Remove</string>
    <string name="transitview_remove_route_neg_button">Cancel</string>
    <string name="schedule_query_button_text">View Schedules</string>
    <string name="schedule_trip_prefix_rail">Train #</string>
    <string name="schedule_trip_prefix_bus">Bus #</string>
    <string name="schedule_trip_prefix_subway">Train #</string>
    <string name="schedule_trip_prefix_trolley">Trolley #</string>
    <string name="schedule_trip_prefix_nhsl">Train #</string>
    <string name="holiday_schedule_title">Holiday Schedule</string>
    <string name="holiday_alert_button_text">View Transit Schedule</string>
    <string name="holiday_alert_button_text_rail">View Rail Schedule</string>
    <string name="prompt_download_database_title">New Schedules Available</string>
    <string name="rating_title">How are we doing?</string>
    <string name="rating_rate_button">Rate Now</string>
    <string name="rating_no_thanks_button">No Thanks</string>
    <string name="rating_remind_me_later_button">Remind Me Later</string>
    <string name="rating_details">We\'d love your feedback on the SEPTA app</string>
</resources>