<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/topnavgroup"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_next_to_arrive"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/next_to_arrive" />
        <item
            android:id="@+id/nav_system_status"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/system_status" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/schedule" />

        <item
            android:id="@+id/nav_fares_transit_info"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/fares_and_transit_info" />
        <item
            android:id="@+id/nav_connect"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/connect_with_septa" />

    </group>

    <group
        android:id="@+id/bottomnavgroup"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:title="Settings" />
        <item
            android:id="@+id/nav_about_app"
            android:title="About the SEPTA App" />
    </group>

</menu>
