<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_padding">

    <ImageButton
        android:id="@+id/rating_dialog_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/icon_padding"
        android:src="@drawable/ic_close"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <org.septa.android.app.view.TextView
        android:id="@+id/rating_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/rating_title"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:typeface="@string/font_roboto_medium"
        app:layout_constraintBottom_toTopOf="@+id/rating_dialog_details"
        app:layout_constraintTop_toBottomOf="@+id/rating_dialog_close" />

    <org.septa.android.app.view.TextView
        android:id="@+id/rating_dialog_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_padding"
        android:text="@string/rating_details"
        android:textColor="#8c8c8c"
        android:textSize="14sp"
        app:typeface="@string/font_roboto_regular"
        app:layout_constraintBottom_toTopOf="@+id/rating_buttons"
        app:layout_constraintTop_toBottomOf="@+id/rating_dialog_title" />

    <LinearLayout
        android:id="@+id/rating_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="25dp"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating_dialog_details">

        <Button
            android:id="@+id/button_rate_app_no_thanks"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/rating_no_thanks_button"
            android:textColor="#9b9b9b" />

        <Button
            android:id="@+id/button_rate_app_remind_me_later"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/rating_remind_me_later_button"
            android:textColor="@color/text_primary" />

        <Button
            android:id="@+id/button_rate_app"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/rating_rate_button"
            android:textColor="@color/text_primary" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>