<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nta_empty_results_msg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="@dimen/dialog_alert_padding"
        android:background="#fff6f4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nta_empty_results"
            android:textAlignment="center" />

        <org.septa.android.app.view.TextView
            android:id="@+id/button_view_schedules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="42dp"
            android:background="@drawable/button_gradient_background"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:letterSpacing="-0.02"
            android:paddingBottom="12dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="12dp"
            android:text="@string/schedule_query_button_text"
            android:textColor="#ffffff"
            android:textSize="14sp"
            app:font="@string/font_roboto_medium" />

    </LinearLayout>

</FrameLayout>